Add SNS notification for launch failure.
Fix script copy.

--- a/RegionSettings/rasp_vic.config
+++ b/RegionSettings/rasp_vic.config
@@ -6,6 +6,9 @@ ami_id="ami-a3e09b93"
 # Amazon SSH key for login.
 aws_key="vicrasp"
 
+# SNS topic for failure notifications.
+sns_topic="arn:aws:sns:us-west-2:504122451688:vicrasp"
+
 # Bucket to write forecast data.
 s3bucket="vicrasp"
 
@@ -20,7 +23,7 @@ spot_price="0.30"
 instance_type="c3.xlarge"
 
 # Minutes, then comma separated list of hours, e.g. AM and PM runs.
-am_and_pm_start="25 08,18"
+am_and_pm_start="00 06,18"
 am_and_pm_stop="59 07,19"
 
 function register_zones()
