Add "list" option to schedule_rasp to list current settings.

--- a/RegionSettings/rasp_vic.config
+++ b/RegionSettings/rasp_vic.config
@@ -1,7 +1,9 @@
+# RASP scheduler settings for Victoria.
+# This script is imported by the schedule_rasp.sh script.
 
-env=vicprod
+env="vicprod"
 
-ami_id="ami-a3e09b93"
+ami_id="ami-f7dd98c7"
 
 # Amazon SSH key for login.
 aws_key="vicrasp"
